--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
 xcode_project: LinkedinSwift/LinkedinSwift.xcodeproj
-xcode_scheme: LinkedinSwiftTests
+xcode_scheme: LinkedinSwift
 xcode_sdk: iphonesimulator9.1
