--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
-xcode_project: LinkedinSwift/LinkedinSwift.xcodeproj
+osx_image: xcode7.3
+xcode_workspace: LinkedinSwift/LinkedinSwift.xcworkspace/
 xcode_scheme: LinkedinSwift
-xcode_sdk: iphonesimulator8.1
+xcode_sdk: iphonesimulator9.3
