--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ osx_image: xcode7.3
 xcode_workspace: LinkedinSwift/LinkedinSwift.xcworkspace/
 xcode_scheme: LinkedinSwift
 xcode_sdk: iphonesimulator9.3
+podfile: LinkedinSwift/Podfile
