Upgrade to linkedin sdk 1.0.7, turn on bitcode

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-LinkedinSwift/Pods/**
-xcuserdata/**
+LinkedinSwift/Pods/*
+Example/Example/Example.xcworkspace/xcuserdata/**
+LinkedinSwift/LinkedinSwift.xcworkspace/xcuserdata/
