--- a/LinkedinSwift/Podfile
+++ b/LinkedinSwift/Podfile
@@ -5,7 +5,7 @@
 
 target 'LinkedinSwift' do
     pod 'AFNetworking', '>=2.6.3'
-    pod 'IOSLinkedInAPIFix', '>= 2.0.3'
+    pod 'IOSLinkedInAPIFix', '= 2.0.4'
 end
 
 target 'LinkedinSwiftTests' do
