Try to use wildcard sdk version on travis
Add cocoapods version requirement

Add travis test command

Try to remove repo master on travis

Add back pod repo remove master

Update xcode sdk spec

Add pod specs to test target

Update xcode sdk spec

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 LinkedinSwift/Pods/*
-Example/Example/Example.xcworkspace/xcuserdata/**
+/xcuserdata/
 LinkedinSwift/LinkedinSwift.xcworkspace/xcuserdata/
+Podfile.lock
