--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: objective-c
-osx_image: xcode7.3.1
+osx_image: xcode7.3
 xcode_workspace: LinkedinSwift/LinkedinSwift.xcworkspace/
 xcode_scheme: LinkedinSwift
-xcode_sdk: iphonesimulator9.3
+xcode_sdk: iphonesimulator
 podfile: LinkedinSwift/Podfile
+before_install:
+  - gem install activesupport -v 4.2.6
+  - gem install cocoapods -v '1.0.1'
+  - pod repo remove master
+  - pod setup
