--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ xcode_scheme: LinkedinSwift
 xcode_sdk: iphonesimulator
 podfile: LinkedinSwift/Podfile
 script:
-    - xcodebuild clean build -sdk iphonesimulator -workspace LinkedinSwift/LinkedinSwift.xcworkspace -scheme LinkedinSwiftTests CODE_SIGNING_REQUIRED=NO
+    - xcodebuild clean test -sdk iphonesimulator -workspace LinkedinSwift/LinkedinSwift.xcworkspace -scheme LinkedinSwift CODE_SIGNING_REQUIRED=NO
